Added podcast details + subscribe + advanced filter - Added details screen with Open/Subscribe/Share actions - Added SharedPreferences subscription store - Added title word-count filter (advanced criteria) - Improved search behavior (clear list when empty)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -10,6 +10,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.SuperPodcast">
+        <activity android:name=".ui.PodcastDetailActivity" />
 
         <activity
             android:name=".ui.PodcastActivity"
