--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,16 +9,18 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.SuperPodcast">
+        android:theme="@style/Theme.SuperPodcast"
+        android:usesCleartextTraffic="true"
+        android:networkSecurityConfig="@xml/network_security_config">
 
         <!-- Detail screen -->
         <activity
             android:name=".ui.PodcastDetailActivity"
             android:exported="false" />
+
         <activity
             android:name=".ui.SubscriptionsActivity"
             android:exported="false" />
-
 
         <!-- Main screen (Launcher) -->
         <activity
